# vibe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  about.hbs  about.toml  mint.json
.agents/skills/vibe/: SKILL.md
.agents/skills/vibe/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
apps/cli/: Cargo.toml  NOTICES
apps/cli/src/: crypto.rs  lib.rs  main.rs  test_helpers.rs
apps/cli/src/commands/: import_compose.rs  init.rs  inspect.rs  install_hooks.rs  keygen.rs  licenses.rs  mod.rs  package.rs  revert.rs  sign.rs  validate.rs  verify.rs
apps/cli/src/hooks/: mod.rs
apps/cli/src/hooks/templates/: vibe_skill.md
apps/mac-host/: ExportOptions.plist  Package.resolved  Package.swift
apps/mac-host/VibeHost/: Info.plist  VibeApp.swift  VibeAppDocument.icns  VibeAppDocument.swift  VibeHost.entitlements  VibeHostApp.swift
apps/mac-host/VibeHost.xcodeproj/: project.pbxproj
apps/mac-host/VibeHost/Models/: AppCapabilities.swift  AppManifest.swift  PackageManifest.swift  (+5 more)
apps/mac-host/VibeHostTests/: AppCapabilitiesTests.swift  AppManifestTests.swift  ContainerRuntimeClientTests.swift  PackageDecryptionTests.swift  PackageExtractorTests.swift  PackageManifestTests.swift  PackageVerifierTests.swift  ProjectTests.swift  RuntimeStateTests.swift  SecretsAndMiscTests.swift  StorageManagerTests.swift  TrustStatusAndVaultEntryTests.swift  VMManagerTests.swift  VaultStoreTests.swift  VibeHostTests.swift
apps/vm-supervisor/: Cargo.toml
apps/vm-supervisor/src/: api.rs  grpc.rs  health.rs  main.rs  project.rs
docs/: appcast.xml  compose-compat-v1.md  manifest-v1.md  rpc-api-v1.md  security-model-v1.md  snapshot-protocol-v1.md  spec.md  state-layout-v1.md  v1-scope.md
examples/encrypted-notes/: server.mjs  vibe.yaml
examples/encrypted-notes-seed/data/: notes.json
examples/nodejs-todo/: package.json  server.js  vibe.yaml
examples/postgres-bookmarks/: package.json  server.js  start.sh  vibe.yaml
examples/postgres-bookmarks-docker/: vibe.yaml
examples/python-api/: app.py  vibe.yaml
examples/redis-leaderboard/: package.json  server.js  start.sh  vibe.yaml
examples/sqlite-notes/: server.mjs  vibe.yaml
examples/static-site/: vibe.yaml
examples/static-site/public/: index.html  style.css
examples/ui-back-forward/: vibe.yaml
examples/ui-back-forward/public/: index.html  page-a.html  page-b.html
examples/ui-full/: vibe.yaml
examples/ui-full/public/: index.html  page-a.html  page-b.html
examples/ui-none/: vibe.yaml
examples/ui-none/public/: index.html  page-a.html  page-b.html
examples/ui-reload/: vibe.yaml
examples/ui-reload/public/: index.html  page-a.html  page-b.html
examples/ws-chat/: package.json  server.js  start.sh  vibe.yaml
libs/compose-import/: Cargo.toml
libs/compose-import/src/: lib.rs
libs/container-runtime/: Cargo.toml
libs/container-runtime/src/: lib.rs
libs/manifest/: Cargo.toml
libs/manifest/src/: lib.rs  parse.rs  validate.rs
libs/manifest/testdata/: invalid_bad_kind.yaml  invalid_bad_version.yaml  invalid_dependency_cycle.yaml  invalid_duplicate_service.yaml  invalid_missing_id.yaml  invalid_missing_volume.yaml  invalid_path_traversal.yaml  valid_full.yaml  valid_minimal.yaml
libs/rpc/: Cargo.toml  build.rs
libs/rpc/proto/: supervisor.proto
libs/rpc/src/: lib.rs
libs/signing/: Cargo.toml
libs/signing/src/: lib.rs
libs/snapshot/: Cargo.toml
libs/snapshot/src/: lib.rs
libs/state-index/: Cargo.toml
libs/state-index/src/: lib.rs
man/: vibe.1
res/Vibe.icon/: icon.json
scripts/: generate-acknowledgments.py  generate-demo-icons.swift
scripts/release/: generate-player-icons.sh  generate-player-icons_extracted_doc_section.sh  refresh-vibeapp-finder-metadata.sh
signing/: .gitignore  README.md
vm-image/: .gitignore  build.sh  vibe-init.sh
website/: docs.json  introduction.mdx  mint.json
website/cli/: import-compose.mdx  init.mdx  inspect.mdx  install-hooks.mdx  keygen.mdx  overview.mdx  package.mdx  revert.mdx  sign.mdx  validate.mdx  verify.mdx
website/getting-started/: open-an-app.mdx  package-an-app.mdx  quickstart.mdx
website/internals/: compose-compat.mdx  host-app.mdx  rpc-api.mdx  snapshots.mdx  state-layout.mdx  vm-runtime.mdx
website/manifest/: overview.mdx  publisher.mdx  secrets.mdx  security.mdx  services.mdx  state.mdx  top-level-fields.mdx  ui.mdx  validation-rules.mdx
website/security/: capability-prompts.mdx  overview.mdx  package-encryption.mdx  runtime-hardening.mdx  secrets.mdx  trust-model.mdx
(+35 files in other folders)
