[workspace]
resolver = "2"
members = [
    "libs/manifest",
    "libs/signing",
    "apps/cli",
]

[workspace.package]
version = "0.1.16"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
zip = "2"
zeroize = { version = "1", features = ["derive"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
