[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vibe_cli"
path = "src/lib.rs"

[[bin]]
name = "vibe"
path = "src/main.rs"

[[bin]]
name = "vibe-gen-man"
path = "src/bin/gen_man.rs"

[dependencies]
vibe-manifest = { path = "../../libs/manifest" }
vibe-signing = { path = "../../libs/signing" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
rpassword = "7"
clap_mangen = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
