[package]
name = "vibe-signing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
